# MoE-Place

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: CLAUDE.md  FINDING.md  MODEL.md  PLAN.md
docs/papers/: KEYS_EMOE.md
docs/secondary/: DESIGN_routing_based_method.md  new_direction_April_19.md  new_direction_April_2.md
experiments/baseline/: benchmark_results.json  coactivation_stats.json  perplexity_results.json  pruning_metrics.json  pruning_ranking.json
experiments/pretrained_routing_stats/: model_config.json  routing_statistics.json
experiments/pruning/: RESULT_ANALYSIS.md  contribution_metrics.json  pruning_results.json  sensitivity_results.json
experiments/routing_stats/: routing_statistics.json
scripts/: ablation_structural_metrics.py  benchmark_baseline.py  collect_pretrained_routing.py  evaluate_pruning.py  setup_env.sh
scripts/analysis/: benchmark_contribution_domains.py  compute_contribution_metrics.py  compute_pruning_metrics.py  domain_sensitivity_analysis.py  eval_pruned_cross_domain.py  evaluate_pruning.py
scripts/jobs/: submit_ablation.sh  submit_contribution.sh  submit_cross_domain_pruning.sh  submit_deepseek.sh  submit_domain_generalization.sh  submit_domain_sensitivity.sh
scripts/plots/: plot_structural_vs_sensitivity.py  visualize_coactivation.py
src/data/: __init__.py  benchmarks.py
src/evaluation/: __init__.py  perplexity.py
src/models/: __init__.py  pretrained_moe.py
src/pruning/: __init__.py  contribution_metrics.py  expert_masking.py  metrics.py
src/routing/: __init__.py  statistics.py  visualization.py
(+8 files in other folders)
