[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moe-place"
version = "0.1.0"
description = "Hardware-aware expert placement for MoE models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "triton>=2.2.0",
    "einops>=0.7.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "datasets>=2.16.0",
    "networkx>=3.0",
    "spicy",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=23.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]
